fix(splash): reduce splash logo size on mobile

--- a/src/app/features/auth/intro/intro.component.scss
+++ b/src/app/features/auth/intro/intro.component.scss
@@ -1,4 +1,10 @@
 @use 'variables' as v;
+@use 'mixins' as m;
+
+$logo-width: 187px;
+$logo-height: 184px;
+$logo-width-mobile: 120px;
+$logo-height-mobile: 118px;
 
 .intro {
   position: fixed;
@@ -7,6 +13,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
   background: linear-gradient(180deg, v.color('primary-hover'), v.color('primary'));
 }
 
@@ -14,7 +21,7 @@
   display: flex;
   align-items: center;
   will-change: transform;
-  transform: translateX(calc(50% - 93.5px));
+  transform: translateX(calc(50% - #{$logo-width} / 2));
   transition: transform 500ms ease-in-out;
 
   &.intro--step1 {
@@ -23,9 +30,9 @@
 }
 
 .intro__logo {
-  flex: 0 0 187px;
-  width: 187px;
-  height: 184px;
+  flex: 0 0 $logo-width;
+  width: $logo-width;
+  height: $logo-height;
   display: block;
 }
 
@@ -42,6 +49,22 @@
 
 .intro__logo-container.intro--step2 .intro__text {
   clip-path: inset(0 0 0 0);
+}
+
+@include m.respond-sm {
+  .intro__logo-container {
+    transform: translateX(calc(50% - #{$logo-width-mobile} / 2));
+  }
+
+  .intro__logo {
+    flex-basis: $logo-width-mobile;
+    width: $logo-width-mobile;
+    height: $logo-height-mobile;
+  }
+
+  .intro__text {
+    font-size: v.font-size('h2');
+  }
 }
 
 .intro--moving {
